2004-12-03 Alain Magloire
	Implement comment blocks(Code take from JDT Editor)
	* src/org/eclipse/cdt/internal/ui/action/AddBlockCommentAction.java
	* src/org/eclipse/cdt/internal/ui/action/BlockCommentAction.java
	* src/org/eclipse/cdt/internal/ui/action/RemoveBlockCommentAction.java
	* src/org/eclipse/cdt/internal/ui/editor/CEditor.java
	* src/org/eclipse/cdt/internal/ui/editor/CEditorMessages.properties
	* src/org/eclipse/cdt/internal/ui/editor/ICEditorActionDefinitionIds.java
	* src/org/eclipse/cdt/internal/ui/text/	CPartitionScanner.java
	* src/org/eclipse/cdt/internal/ui/text/CTextTools.java
	* src/org/eclipse/cdt/internal/ui/text/FastCPartitionScanner.java
	* src/org/eclipse/cdt/internal/ui/text/ICPartitions.java
	* plugin.xml

2004-12-02 Alain Magloire
	Fix for 40081
	Textfield to choose NM.
	Fix MacOX binary parser page.
	* src/org/eclipse/cdt/internal/ui/CUIMessages.properties.
	* src/org/eclipse/cdt/ui/dialogs/BinaryParserBlock.java
	* src/org/eclipse/cdt/ui/dialogs/CygwinPEBinarParserPage.java
	* src/org/eclipse/cdt/ui/dialogs/MachOBinaryParserPage.java

2004-11-25 Alain Magloire
	Fix for PR 79327
	* src/org/eclipse/cdt/internal/ui/cview/CViewLabelProvider.java
	
2004-11-24 Chris Wiebe

	fix command binding for OpenTypeInHierarchyAction
	* plugin.xml
	
2004-11-24 Alain Magloire
	Remove unused class, reduce confusion in code maintainance.
	* src/org/eclipse/cdt/internal/ui/util/ProblemItemMapper.java

2004-11-19 Alain Magloire
	Fix for PR 39204
	* src/org/eclipse/cdt/internal/ui/editor/CEditor.java

2004-11-19 Bogdan Gheorghe
	Fix for 43664 : Search should report matches outside of workspace
	
	* src/org/eclipse/cdt/internal/ui/editor/ExternalSearchAnnotationModel.java
	* src/org/eclipse/cdt/internal/ui/editor/ExternalSearchDocumentProvider.java	
	* src/org/eclipse/cdt/internal/ui/editor/ExternalSearchEditor.java
	* src/org/eclipse/cdt/internal/ui/editor/ExternalSearchFile.java	
	* src/org/eclipse/cdt/internal/ui/preferences/CSearchPreferencePage.java	