@@ -1,3 +1,8 @@
+2004-12-03 Chris Wiebe
+	fix for 74098
+	* src/org/eclipse/cdt/internal/ui/wizards/classwizard/NewClassCodeGenerator.java
+	* src/org/eclipse/cdt/internal/ui/wizards/classwizard/NewClassCreationWizardPage.java
+
 2004-12-03 Alain Magloire
 	Implement comment blocks(Code take from JDT Editor)
 	* src/org/eclipse/cdt/internal/ui/action/AddBlockCommentAction.java
